tdf#111567: fix memleak in TemplateLocalView::insertItems

Clearing mItemList at the begin of insertItems is a bad idea
because it prevents ImplDeleteItems (called by updateItems,
itself called at the end of insertItems) from clearing
correctly mItemList
See comments from bugtracker for more info

(Thank you Alex for the precious info attached with memleak reports! :-))

Change-Id: I04976dbb065d1369562649fc97c33f7fd599b107
Reviewed-on: https://gerrit.libreoffice.org/40995
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Julien Nabet <serval2412@yahoo.fr>